--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,8 +1,9 @@
 .contacts {
   @media screen and (max-width: 1199px) {
+    
     background-image: url(../images/background/bg-contact-mobile.png);
-    background-color: #191C26;
-    background-repeat: no-repeat;  
+    background-repeat: no-repeat; 
+    background-size: cover; 
     padding: 100px 0;
     @include retina {
     background-image: url(../images/background/bg-contact-mobile-2x.png);  
@@ -24,9 +25,16 @@
      }
 
     @include desktop {
+      
       width: calc(50% - 15px);
-      margin-left: 100px;
+      padding-top: 130px;
+      padding-left: 100px;
     }
+    }
+
+    .online {
+      width: 100%;
+      background-color: #191C26;
     }
 
   .contacts-title {
