--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,9 +1,10 @@
 .contacts {
-  @media screen and (max-width: 1199px) {
-    
-    background-image: url(../images/background/bg-contact-mobile.png);
+  background-image: url(../images/background/bg-contact-mobile.png);
     background-repeat: no-repeat; 
     background-size: cover; 
+  @media screen and (max-width: 1199px) {
+    
+    
     padding: 100px 0;
     @include retina {
     background-image: url(../images/background/bg-contact-mobile-2x.png);  
@@ -27,8 +28,7 @@
     @include desktop {
       
       width: calc(50% - 15px);
-      padding-top: 130px;
-      padding-left: 100px;
+      padding: 130px 15px;
     }
     }
 
